# DIP

Butterflies_Project/: Informacion.txt
Butterflies_Project/DetectorExample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detector  detector.cpp  main.cpp
Butterflies_Project/training/: bg.txt  butter.info  butter.vec
Butterflies_Project/training/data/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cambell-Robson-Generator-OpenCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cambell_robson  cambell_robson.cpp  cmake_install.cmake
Camera_Calibration_Chessboard_Cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  getParameters  getParameters.cpp  parameters.yml
ImageConvolution/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  counterExample.cpp  divergencia.txt  file_management.cpp  frequency_filter.cpp  graficos.m  resultados.csv  results.txt  resultsGF.txt  resultsGS.txt  resultsLF.txt  resultsNSLS.txt  resultsSLS.txt  space_filter.cpp  tarea4  tarea4.cpp
LTI_Library_Image_Loader/: Makefile  imageLoader  imageLoader.cpp
LTI_Library_Image_Loader/Entregable/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  imageLoader  imageLoader.cpp
LTI_Library_Image_Loader/Entregable/LTIlib/: Makefile
LTI_Library_Image_Loader/LTIlib-2/: imageLoader.cpp
LTI_Library_Image_Loader/OpenCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageLoader  imageLoader.cpp
LTI_Library_Image_Loader/example/: Makefile  imageShow  imageShow.cpp
ProbabilityHyst/: .gitignore  CMakeLists.txt
ProbabilityHyst/capture/: capture  capture.cpp  captureFrame.cpp  captureFrame.hpp
ProbabilityHyst/predict/: CMakeLists.txt  predict  predict.cpp  predictFrame.cpp  predictFrame.hpp
ProbabilityHyst/train/: CMakeLists.txt  hists.yaml  train.cpp  trainer  trainer.cpp  trainer.hpp
